# Lecture_Review

./: ACCESSIBILITY_REPORT.md  README.md  package-lock.json
backend/: auth_utils.py  database.py  main.py  models.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue  LectureDetailView.vue  LoginView.vue  RegisterView.vue  SignupView.vue
